# Paper-Dev

./: .env.example  .gitignore  README.md  paper_sources_monitoring_catalog.md  paper_watcher_architecture_and_development_plan.md  paper_watcher_development_plan.md  pyproject.toml
config/: keywords.yaml  report.yaml  scoring.yaml  settings.yaml  sources.yaml  users.yaml  venues.yaml
docs/: functional_test_plan.md  monitoring_hot_reload_design.md  next_development_plan.md  subscription_union_event_flow.md  website_watcher_implementation_plan.md
paper_watcher/: __init__.py  background.py  config_loader.py  config_watcher.py  debug_server.py  events.py  foreground.py  http_client.py  main.py  models.py  network.py  scanner.py  settings.py  source_health.py  subscriptions.py  verifier.py
paper_watcher/fetchers/: base.py  dblp_fetcher.py  rss_fetcher.py  website_watcher.py
paper_watcher/filters/: __init__.py  scoring.py
paper_watcher/parsers/: normalizer.py
paper_watcher/storage/: database.py  file_storage.py  migrations.py  repository.py
scripts/: git_credential_from_env.py  send_debug_update.py
tests/: test_background.py  test_background_loop.py  test_config_loader.py  test_dblp_fetcher.py  test_debug_server.py  test_events.py  test_http_client.py  test_normalizer.py  test_repository.py  test_scoring.py  test_source_health.py  test_user_flow.py  test_verifier.py  test_website_watcher.py
